# fetch-vault

./: .gitignore  IMPORT_FEATURE.md  README.md  index.html  package-lock.json  package.json  sample-passwords.csv  sample_import.csv  tailwind.config.js  tsconfig.json  vite.config.ts
src/: App.tsx  index.css  main.tsx  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: crypto.rs  error.rs  import.rs  lib.rs  main.rs  storage.rs
src/components/auth/: ErrorPopup.tsx  Login.tsx  MasterKeyConfirmationModal.tsx
src/components/settings/: CollapsibleSection.tsx  DeleteVaultModal.tsx  ImportModal.tsx  SettingRow.tsx  SettingsPage.tsx  SuccessPopup.tsx  TabButton.tsx  ThemePreview.tsx  UpdateMasterKeyModal.tsx
src/components/settings/tabs/: AppearanceSettings.tsx  SecuritySettings.tsx  TagManagementSettings.tsx  VaultManagementSettings.tsx  VaultStats.tsx
src/components/shared/: AboutModal.tsx  ThemeToggle.tsx
src/components/vault/: AddFolderModal.tsx  AddItemModal.tsx  AudioPlayer.tsx  CsvImportModal.tsx  DeleteConfirmationModal.tsx  ItemCard.tsx  ItemDetailsModal.tsx  ItemList.tsx  Sidebar.tsx  VaultPage.tsx  VideoPlayer.tsx
src/hooks/: useAuth.ts  useAutoLock.ts  useSettings.tsx  useTheme.ts  useVaultManagement.tsx  useVaultStats.tsx
src/utils/: constants.ts  helpers.ts
