[package]
name = "fetch"
version = "0.1.0"
description = "A secure digital vault"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0-alpha.8", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-alpha.8", features = [] }
thiserror = "1.0"
aes-gcm = "0.10"
argon2 = "0.5"
rand = { version = "0.8", features = ["getrandom"] }
zeroize = "1.6"
uuid = { version = "1.4", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
mime_guess = "2.0"
tauri-plugin-log = { version = "2.0.0-alpha.0", features = ["colored"] } # Corrected: Removed "trace" feature
dirs = "5.0"
rusqlite = { version = "0.31.0", features = ["bundled"] }
tauri-plugin-dialog = "2.0.0-alpha.0"
tauri-plugin-notification = "2.0.0-alpha.0"
zip = "0.6"
walkdir = "2"
base64 = "0.21"
tempfile = "3.10"
zip-extract = "0.1"
secrecy = { version = "0.8", features = ["serde"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
