[package]
name = "fetch"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-alpha.8", features = [] }

[dependencies]
tauri = { version = "2.0.0-alpha.8", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
rusqlite = { version = "0.29", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
log = "0.4"
env_logger = "0.10"
tauri-plugin-log = { version = "2.0.0-alpha.0", features = ["colored"] }
tauri-plugin-dialog = "2.0.0-alpha.0"
tauri-plugin-notification = "2.0.0-alpha.0"
walkdir = "2.3"
zip = "0.6"
base64 = "0.21"
rand = "0.8"
aes-gcm = "0.10"
argon2 = "0.5"
csv = "1.3"
zeroize = "1.6"
thiserror = "1.0"
mime_guess = "2.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
